# io-arg

./: CHANGELOG.md  Cargo.toml  Changelog.md  LICENSE  README.md  Readme.md
.github/workflows/: release.yml  test.yml
examples/: progress_bar.rs
src/: Readme.md  input.rs  io_arg.rs  lib.rs  output.rs
