[package]
name = "io-arg"
version = "0.1.0"
authors = ["Markus Klein <markus-klein@live.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
structopt = "0.3.21"
indicatif = "0.15.0"
atty = "0.2.14"
